How-it-works Sections completed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,14 @@ html {
     text-rendering: optimizeLegibility;
 }
 
+.clearfix { zoom: 1 }
+.clearfix:after {
+    content: "";
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
 
 /* ------------------------------------------------ */
 /* REUSABLE COMPONENTS */
@@ -280,4 +288,8 @@ header
     height: 50px;
     width: auto;
     margin-right: 10px;
+}
+
+.section-steps {
+    background-color: #f4f4f4;
 }
