--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -136,7 +136,7 @@ a:hover,a:active {
 /* -------BUTTONS----- */
 
 
-.btn:link, .btn:visited {
+.btn:link, .btn:visited, input[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -145,7 +145,7 @@ a:hover,a:active {
     transition: background-color 0.2s;
 }
 
-.btn-full:link, .btn-full:visited {
+.btn-full:link, .btn-full:visited, input[type=submit]  {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -157,7 +157,7 @@ a:hover,a:active {
     color: #e67e22;
 }
 
-.btn:hover, .btn:active {
+.btn:hover, .btn:active, input[type=submit]:hover, input[type=submit]:active  {
     background-color: #cf6d17; 
 }
 
@@ -438,4 +438,34 @@ cite img {
     background-color: #fcfcfc;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+
+
+/* ------------------------------------------------ */
+/* FORM */
+/* ------------------------------------------------ */
+
+
+.contact-form {
+    width: 60%;
+    margin: 0 auto;
+}
+
+input[type=text], input[type=email], select, textarea {
+    width: 100%;
+    padding: 7px;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100px;
+}
+
+input[type=checkbox] {
+    margin: 10px 5px 10px 0;
+}
+
+*:focus {
+    outline: none;
 }
