--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -469,3 +469,74 @@ input[type=checkbox] {
 *:focus {
     outline: none;
 }
+
+/* ------------------------------------------------ */
+/* FOOTER */
+/* ------------------------------------------------ */
+
+footer {
+    background-color: #333;
+    padding: 40px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-links {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li, .social-links li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.social-links li:last-child {
+    margin-right: 0;
+}
+
+.footer-nav li a:link, .footer-nav li a:visited, .social-links li a:link, .social-links li a:visited  {
+    text-decoration: none;
+    border: 0;
+    color: #a2a2a2;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover, .footer-nav li a:active {
+    color: #ddd;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 20px;
+}
+
+.social-links li a:link, .social-links li a:visited {
+    font-size: 160%;
+}
+
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+
+.ion-social-twitter:hover {
+    color: #00b6f1;
+}
+
+.ion-social-googleplus:hover {
+    color: #b31217;
+}
+
+.ion-social-instagram:hover {
+    color: #c32aa3;
+}
+
+.ion-social-facebook, .ion-social-twitter, .ion-social-googleplus, .ion-social-instagram {
+    transition: color 0.2s;
+}
