--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -18,15 +18,67 @@
         width: 80%;
         margin-left: 10%;
     }
+    
+    .steps-box { margin-top: 10px; }
+    .steps-box:last-child { margin-top: 10px; }
+    .works-step { margin-top: 40px; }
+    .works-step:last-of-type { margin-top: 60px; }
+    
+    .app-screen { width: 50%; }
+    
+    .icon-small { 
+        width: 17px;
+        margin-right: 5px;
+    }
+    .city-feature { font-size: 90%; }
+    .plan-box {
+        width: 100%;
+        margin-left: 0%;
+    }
+    .plan-price { font-size: 250%; }
+    .contact-form { width: 80%; }
 }
 
 /* Width of iPad 768px. */
 /* Small phones to small tablets */
 @media only screen and (max-width: 767px) { 
+    body { font-size: 16px; }
     
+    section { padding: 30px 0; }
+    
+    .row ,.hero-text-box {
+        padding: 0 4%;
+    }
+    .col { 
+        width: 100%; 
+        margin: 0 0 4% 0;
+    }
+    .main-nav { display: none; }
+    .long-copy {
+        width: 100%;
+        margin-left: 0%;
+    }
+    h1 { font-size: 180%; }
+    h2 { font-size: 150%; }
+    
+    .works-step { margin-top: 20px; }
+    .works-step:last-of-type { margin-top: 20px; }
+    
+    .works-step div {
+        height: 40px;
+        width: 40px;
+        padding: 4px;
+        margin-right: 15px;
+        font-size: 120%;
+    }
+    
+    .steps-box:first-child { text-align: center; }
+    
+    .app-screen { width: 40%; }
 }
 
 /* Small phones: from 0 to 480px  */
 @media only screen and (max-width: 480px) { 
-    
+    section { padding: 25px 0; }
+    .contact-form { width: 100%; }
 }
