--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -126,6 +127,7 @@ a:link,a:visited {
     text-decoration: none;  
     border-bottom: 1px solid #cf6d17;
     padding-bottom: 1px;
+    -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -143,6 +145,7 @@ a:hover,a:active {
     font-weight: 300;
     text-decoration: none;
     border-radius: 200px;
+    -webkit-transition: background-color 0.2s;
     transition: background-color 0.2s;
 }
 
@@ -178,6 +181,7 @@ a:hover,a:active {
 
 header 
 {
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.7)),to(rgba(0, 0, 0, 0.7))) , url(img/hero.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) , url(img/hero.jpg);
     background-size: cover;
     background-position: center;
@@ -190,6 +194,7 @@ header
     width: 1140px;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
 }
 
@@ -217,6 +222,7 @@ header
     text-transform: uppercase;
     font-size: 90%;
     border-bottom: 2px solid transparent;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
     padding: 8px 0;
 }
@@ -262,12 +268,17 @@ header
 .meal-photo img {
    width: 100%;
    height: auto;
+   -webkit-transform: scale(1.15);
    transform: scale(1.15);
+   -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+   transition: opacity 0.5s, -webkit-transform 0.5s;
    transition: transform 0.5s, opacity 0.5s;
+   transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
    opacity: 0.7;
 }
 
 .meal-photo img:hover {
+    -webkit-transform: scale(1.03);
     transform: scale(1.03);
     opacity: 1;
 }
@@ -349,6 +360,7 @@ header
 
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.8)),to(rgba(0, 0, 0, 0.8))),url(img/back-customers.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)),url(img/back-customers.jpg);
     background-size: cover;
     color: #fff;
@@ -398,6 +410,7 @@ cite img {
     border-radius: 5px;
     width: 90%;
     margin-left: 5%;
+    -webkit-box-shadow: 0 2px 2px #f7f7f7;
     box-shadow: 0 2px 2px #f7f7f7;
 }
 
@@ -504,6 +517,7 @@ footer {
     text-decoration: none;
     border: 0;
     color: #a2a2a2;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -539,5 +553,6 @@ footer p {
 }
 
 .ion-social-facebook, .ion-social-twitter, .ion-social-googleplus, .ion-social-instagram {
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
